--- a/index.html
+++ b/index.html
@@ -84,7 +84,14 @@ LifeBoxPlayer proposed features
 <a id="change-log" class="anchor" href="#change-log" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Change Log</h3>
 
 <p>
-  9 Sep 2016 - <a href="https://github.com/LifeBoxApp/LifeBoxApp/releases/tag/v0.1.5">LifeBoxApp v0.1.5</a>
+  15 Sep 2016 - <a href="https://github.com/LifeBoxApp/LifeBoxApp/releases/tag/v0.1.6">LifeBoxApp v0.1.6</a>
+  <ul>
+    <li>Added user agreement message.</li>
+  </ul>
+</p>
+
+<p>
+  9 Sep 2016 - LifeBoxApp v0.1.5
   <ul>
     <li>Updated to Android SDK version 16.</li>
     <li>Changed audio format from 3GP to MP4.</li>
